--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,21 +1,19 @@
-<div class=side-bar-header>
+<div class="side-bar-header">
   <div class="header-name">
     <%= link_to current_user.name, edit_user_path(current_user) %>
   </div>
   <div class="create-room">
-    <a href="#">チャットルームを作成する</a>
+    <%= link_to "チャットルームを作成する", new_room_path %>  <%#rails routesで取得したいぼパスをチェック%>
   </div>
 </div>
 
 <div class="rooms">
-  <div class="room">
-    <div class="room-name">
-      <a href="#">techroom1</a>
+  <% current_user.rooms.each do |room| %>
+    <div class="room">
+      <div class="room-name">
+        <a href="#"><%= room.name %></a>
+      </div>
     </div>
-  </div>
-  <div class="room">
-    <div class="room-name">
-      <a href="#">techroom2</a> 
-    </div>
-  </div>
+  <% end%>
 </div>
+  
